--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,27 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Activity styles -->
+    <style name="ActivityAddStyle">
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="DefaultActivityStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <!-- Item Style -->
+    <style name="ItemStyle">
+        <item name="android:background">@color/item_back_color</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+    <!-- Elements styles -->
     <style name="EditTextStyle">
         <item name="android:textColor">@color/add_et_color</item>
         <item name="android:textColorHint">@color/add_et_hint_color</item>
@@ -26,8 +47,14 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="ActivityAddStyle">
-        <item name="android:background">@color/white</item>
+    <style name="TextItemStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-medium</item>.
+        <item name="android:textSize">@dimen/item_text_size</item>
     </style>
+
+
+
 
 </resources>
