--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/DefaultActivityStyle"
     android:background="@drawable/background"
-    tools:context=".ItemActivity">
+    tools:context=".ItemsFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
