--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="middle_text_size">14sp</dimen>
+
     <!-- Add Screen -->
     <dimen name="add_et_margin_st_en">32dp</dimen>
     <dimen name="add_et_margin_b">8dp</dimen>
@@ -10,7 +12,7 @@
     <dimen name="add_btn_margin_t">56dp</dimen>
 
     <dimen name="add_et_size">24sp</dimen>
-    <dimen name="add_btn_text_size">14sp</dimen>
+    <dimen name="add_btn_text_size">@dimen/middle_text_size</dimen>
 
     <!-- Item -->
     <dimen name="item_padding_st_en">24dp</dimen>
@@ -19,5 +21,7 @@
     <dimen name="item_text_size">20dp</dimen>
     <dimen name="item_text_margin_e">8dp</dimen>
 
+    <!-- Tab -->
+    <dimen name="tab_text_size">@dimen/middle_text_size</dimen>
 
 </resources>
