--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/DefaultActivityStyle"
     android:orientation="vertical"
@@ -8,10 +7,7 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
-        style="@style/TabLayoutStyle"
-        app:tabSelectedTextColor="@color/tab_selected"
-        app:tabTextColor="@color/tab_not_selected"
-        app:tabIndicatorColor="@color/tab_indicator_color" />
+        style="@style/TabLayoutStyle" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
