--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/DefaultActivityStyle"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        style="@style/TabLayoutStyle" />
+    <android.support.design.widget.AppBarLayout
+        style="@style/DefaultActivityStyleMV">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/ToolbarStyle" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            style="@style/TabLayoutStyle" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
-        style="@style/DefaultActivityStyle" />
+        style="@style/ViewPagerStyle" />
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_fab"
+        style="@style/FabStyle"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="@dimen/fab_margin_b"
+        android:layout_marginEnd="@dimen/fab_margin_en" />
+
+</android.support.design.widget.CoordinatorLayout>
