--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,8 @@
     <!-- Tab -->
     <dimen name="tab_text_size">@dimen/middle_text_size</dimen>
 
+    <!-- Fab -->
+    <dimen name="fab_margin_en">16dp</dimen>
+    <dimen name="fab_margin_b">28dp</dimen>
+
 </resources>
