--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,31 +5,43 @@
     android:orientation="vertical"
     tools:context=".AddActivity">
 
-    <EditText
-        android:id="@+id/et_name"
-        style="@style/EditTextStyle"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_name"
+        style="@style/DefaultActivityStyleMV"
         android:layout_marginBottom="@dimen/add_et_margin_b"
         android:layout_marginEnd="@dimen/add_et_margin_st_en"
         android:layout_marginStart="@dimen/add_et_margin_st_en"
         android:layout_marginTop="@dimen/add_et_margin_t"
-        android:hint="@string/add_hint_name"
-        android:inputType="textCapSentences" />
+        android:hint="@string/add_hint_name">
 
-    <EditText
-        android:id="@+id/et_price"
-        style="@style/EditTextStyle"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/et_name"
+            style="@style/EditTextStyle"
+            android:inputType="textCapSentences" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_price"
+        style="@style/DefaultActivityStyleMV"
         android:layout_marginEnd="@dimen/add_et_margin_st_en"
         android:layout_marginStart="@dimen/add_et_margin_st_en"
-        android:hint="@string/add_hint_price"
-        android:inputType="number" />
+        android:hint="@string/add_hint_price">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/et_price"
+            style="@style/EditTextStyle"
+            android:inputType="number" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_add"
         style="@style/ButtonStyle"
-        android:paddingStart="@dimen/add_btn_padding_st_en"
-        android:paddingEnd="@dimen/add_btn_padding_st_en"
-        android:layout_marginTop="@dimen/add_btn_margin_t"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/add_btn_margin_t"
+        android:paddingEnd="@dimen/add_btn_padding_st_en"
+        android:paddingStart="@dimen/add_btn_padding_st_en"
         android:text="@string/add_btn_confirm" />
 
 </LinearLayout>
