add Action Mode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,10 @@
     <color name="perry_winkle_70">#b38baaef</color>
     <color name="perry_winkle_100">#1e88e5</color>
     <color name="marigold">#ffc107</color>
+    <color name="dark_grey_blue">#333f59</color>
+    <color name="white_five">#f2f2f2</color>
+    <color name="white_two">#59ffffff</color>
+
 
     <color name="icon_launcher_color">@color/lightish_blue</color>
 
@@ -29,7 +33,8 @@
 
     <!-- Item -->
     <color name="item_text_name_color">@color/medium_grey</color>
-    <color name="item_text_price_color">@color/dark_sky_blue</color>
+    <color name="item_text_price_inc_color">@color/dark_sky_blue</color>
+    <color name="item_text_price_exp_color">@color/apple_green</color>
     <color name="item_back_color">@color/white</color>
 
     <!-- TabLayout -->
@@ -46,5 +51,16 @@
     <color name="refresh_second">@color/marigold</color>
     <color name="refresh_third">@color/apple_green</color>
     <color name="refresh_fourth">@color/lightish_blue</color>
+
+    <!-- ActionMode -->
+    <color name="action_mode_back">@color/dark_grey_blue</color>
+    <color name="action_mode_item_selected">@color/white_five</color>
+    <color name="action_mode_item_default">@color/white</color>
+
+    <!-- Auth Screen -->
+    <color name="auth_back">@color/lightish_blue</color>
+    <color name="auth_btn_text_color">@color/lightish_blue</color>
+    <color name="auth_app_name_text_color">@color/white</color>
+    <color name="auth_version_text_color">@color/white_two</color>
 
 </resources>
