--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeBackground">@color/action_mode_back</item>
     </style>
 
     <!-- Activity styles -->
@@ -24,9 +26,14 @@
         <item name="colorAccent">@color/add_color_accent</item>
     </style>
 
+    <style name="ActivityAuth" parent="DefaultActivityStyle">
+        <item name="android:background">@color/auth_back</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
     <!-- Item Style -->
     <style name="ItemStyle" parent="DefaultActivityStyleMV">
-        <item name="android:background">@color/item_back_color</item>
+        <item name="android:background">@drawable/bg_item</item>
     </style>
 
     <!-- Elements styles -->
@@ -62,7 +69,7 @@
         <item name="tabSelectedTextColor">@color/tab_selected</item>
     </style>
 
-    <style name="ToolbarStyle"  parent="DefaultActivityStyleMV" >
+    <style name="ToolbarStyle" parent="DefaultActivityStyleMV">
         <item name="android:background">@color/toolbar_back_color</item>
         <item name="layout_scrollFlags">scroll|snap</item>
         <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
@@ -75,6 +82,40 @@
     <style name="FabStyle" parent="DefaultElementStyle">
         <item name="fabSize">normal</item>
         <item name="android:src">@drawable/ic_add</item>
+    </style>
+
+    <style name="IconAuthStyle">
+        <item name="android:layout_width">@dimen/icon_size</item>
+        <item name="android:layout_height">@dimen/icon_size</item>
+        <item name="android:src">@drawable/ic_icon</item>
+    </style>
+
+    <style name="BtnAuthStyle">
+        <item name="android:layout_width">@dimen/btn_sign_width</item>
+        <item name="android:layout_height">@dimen/btn_sign_high</item>
+        <item name="android:src">@drawable/ic_icon</item>
+        <item name="android:drawableStart">@drawable/ic_logo</item>
+        <item name="android:background">@drawable/btn_google_auth</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:paddingEnd">@dimen/btn_sign_padding_en</item>
+        <item name="android:paddingStart">@dimen/btn_sign_padding_st</item>
+        <item name="android:text">@string/btn_google_title</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/auth_btn_text_color</item>
+    </style>
+
+    <style name="AppNameAuthStyle" parent="DefaultElementStyle">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:text">@string/app_name</item>
+        <item name="android:textColor">@color/auth_app_name_text_color</item>
+        <item name="android:textSize">@dimen/app_name_text_size</item>
+    </style>
+
+    <style name="VersionAuthStyle" parent="DefaultElementStyle">
+        <item name="android:textSize">@dimen/middle_text_size</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:gravity">bottom|center_horizontal</item>
+        <item name="android:textColor">@color/auth_version_text_color</item>
     </style>
 
 </resources>
